# ft_select

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ft_select.h
libft/: Makefile
libft/include/libft/: lib.h  trm.h
libft/src/ds/: ft_vu_removen.c
libft/src/io/: ft_cin_seek.c  ft_ifstream_read.c  ft_ifstream_seek.c  ft_imstream_read.c  ft_imstream_seek.c  ft_istream_peek.c  ft_istream_read.c  ft_istream_seek.c  ft_ofstream.c
libft/src/str/: ft_memrcpy.c
libft/src/trm/: ft_caps.c  ft_trm.c  ft_trm_keys.c  ft_trm_on.c
src/: select.c
